# workflows

./: .gitignore
image_processing/: .env.dev  .env.sample  DEVELOPMENT.md  DEVELOPMENT_REFERENCE.md  Dockerfile  Dockerfile.ml  Dockerfile.monitor  Dockerfile.n8n  Dockerfile.notifier  Dockerfile.processor  Dockerfile.web  Makefile  Makefile.dev  README.md  STRUCTURE.md  docker-compose-multi.yml  docker-compose.dev.yml  docker-compose.yml  env.sample  pyproject.toml  requirements.dev.txt  requirements.ml.txt  requirements.monitor.txt  requirements.notifier.txt  requirements.processor.txt  requirements.txt  requirements.web.txt  setup.sh
image_processing/config/: filemaker.dsn.sample  output_specs.yaml  server_config.json  workflow.json
image_processing/dev/: create_sample_images.py  mock_database.py  mock_teams.html  setup_dev_environment.sh  test_workflow.py
image_processing/dev/config/: filemaker.dsn
image_processing/docker/: Dockerfile.ml  Dockerfile.monitor  Dockerfile.notifier  Dockerfile.processor  Dockerfile.web
image_processing/scripts/: background_removal.py  file_monitor.py  image_processor.py  ml_server.py  monitor_server.py  notifier_server.py  processor_server.py  teams_notifier.py  web_server.py
image_processing/scripts/utils/: __init__.py  filemaker_conn.py  image_utils.py
image_processing/src/: __init__.py  cli.py  main.py
image_processing/src/config/: __init__.py  settings.py
image_processing/src/models/: __init__.py  file_models.py  metadata_models.py  part_mapping_models.py  processing_models.py  workflow_models.py
image_processing/src/services/: __init__.py  background_removal_service.py  file_monitor_service.py  filemaker_service.py  image_processing_service.py  ml_server.py  monitor_server.py  notification_service.py  notifier_server.py  part_mapping_service.py  processor_server.py
image_processing/src/utils/: __init__.py  crypto_utils.py  error_handling.py  filesystem_utils.py  logging_config.py
image_processing/src/web/: __init__.py  app.py
image_processing/src/workflows/: __init__.py  crown_processing_clean.json  file_monitoring.py  processing_orchestrator.py
image_processing/templates/: dashboard.html  edit_metadata.html  error.html  exif_editor.html  review.html  upload.html
image_processing/tests/integrations/: test_workflow_integration.py
image_processing/tests/unit/: test_background_removal_service.py  test_file_models.py  test_file_monitor_service.py  test_part_mapping_service.py
